fix: table text alignment

--- a/src/blocks/_tickets.scss
+++ b/src/blocks/_tickets.scss
@@ -29,6 +29,21 @@
     }
   }
 
+  .tix-column{
+    &-description{
+      text-align: left;
+    }
+
+    &-price{
+      text-align: right;
+    }
+
+    &-quantity,
+    &-remaining{
+      text-align: center;
+    }
+  }
+
   &-title {
     @include h5();
   }
